--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "daisyui": "^5.0.49",
     "framer-motion": "^12.23.11",
+    "motion": "^12.23.12",
     "next": "15.3.4",
     "nuqs": "^2.4.3",
     "react": "^19.0.0",
