--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "@vercel/blob": "^2.0.0",
     "daisyui": "^5.0.49",
     "framer-motion": "^12.23.11",
     "motion": "^12.23.12",
